deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games
  template:
    metadata:
      labels:
        app: games
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: backend
          image: ghcr.io/desecho/games-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: frontend
          image: ghcr.io/desecho/games-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
