deployment/service_backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: games-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: games
