deployment/service_frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: games-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: games
